--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -41,15 +41,6 @@ mv composer.phar /usr/local/bin/composer
 RUN	wget https://get.symfony.com/cli/installer -O - | bash && \
     mv /root/.symfony5/bin/symfony /usr/local/bin/symfony
 
-# Install supervisor
-RUN apt-get update && apt-get install -y supervisor
-
-# Create supervisor configuration directory
-RUN mkdir -p /etc/supervisor/conf.d/
-
-# Copy supervisor configuration
-COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
-
 # Setup php.ini
 COPY php.ini /usr/local/etc/php/php.ini
 COPY php-fpm-pool.conf /usr/local/etc/php/pool.d/www.conf
@@ -99,7 +90,6 @@ RUN echo "dev ALL=(ALL) ALL" > /etc/sudoers
 WORKDIR /home/wwwroot/
 ##</romaricp>##
 
-EXPOSE 9000
 
-# Set the CMD to run supervisord
-CMD ["/usr/bin/supervisord"]
+EXPOSE 9000
+CMD ["php-fpm"]
